# iii

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .skill-check.yaml  AGENTS.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.debug  HOWTO_PLAN.md  LICENSE  LICENSE.spdx  MOTIA_REMOVAL_SUMMARY.md  Makefile  NOTICE  NOTICE.md  PATENTS  README.md  SPIKE_NOTES.md  TODOS.md  bacon.toml  biome.json  build.rs  build.sh  client.js  client_stream_only.js  config-kv.yaml  config-remote-kv.yaml  config.prod.yaml  config.yaml  contributors.md  demo-start.sh  demo-test.sh  docker-compose.prod.yml  docker-compose.yml  install.sh  licenserc.toml  package-lock.json  (+9 more)
.cargo/: config.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.planning/: BACKLOG.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
agentic-backend/: SKILL.md
benches/: concurrent_invocation_bench.rs  control_plane_churn_bench.rs  core_runtime_bench.rs  http_concurrency_loopback_bench.rs  http_single_route_loopback_bench.rs  kv_store_bench.rs  protocol_serde_bench.rs  pubsub_fanout_bench.rs  queue_enqueue_bench.rs  startup_bench.rs  state_adapter_bench.rs  trigger_fanout_bench.rs  worker_cleanup_bench.rs  worker_invocation_tracking_bench.rs  ws_roundtrip_bench.rs
blog/: README.md  package.json
cli/: Cargo.toml  install.sh
cli/src/: cli.rs  error.rs  github.rs  lib.rs  main.rs  registry.rs  state.rs  telemetry.rs  update.rs
cli/src/workers/: config.rs  install.rs  manifest.rs  registry.rs  spec.rs  storage.rs  uninstall.rs
client_lua/: grpcurl_client.lua
console/: .gitignore  LICENSE  README.md  install.sh  lefthook.yml  package.json
crates/iii-filesystem/: Cargo.toml  build.rs
crates/iii-filesystem/src/: init.rs  lib.rs
crates/iii-filesystem/src/backends/: mod.rs
crates/iii-filesystem/src/backends/passthroughfs/: builder.rs  create_ops.rs  dir_ops.rs  file_ops.rs  inode.rs  metadata.rs  mod.rs  remove_ops.rs  special.rs
crates/iii-filesystem/src/backends/shared/: handle_table.rs  init_binary.rs  inode_table.rs  mod.rs  name_validation.rs  platform.rs
crates/iii-filesystem/tests/: filesystem_integration.rs
crates/iii-init/: Cargo.toml
crates/iii-init/src/: error.rs  fs_handler.rs  lib.rs  main.rs  mount.rs  network.rs  parse.rs  prepared_marker.rs  rlimit.rs  root_pivot.rs  shell_dispatcher.rs  supervisor.rs
crates/iii-init/src/fs_handler/: ops.rs  streaming.rs  tests.rs
crates/iii-init/tests/: init_integration.rs
crates/scaffolder-core/: Cargo.toml
crates/scaffolder-core/src/: cli.rs  lib.rs  telemetry.rs
crates/scaffolder-core/src/config/: generator.rs  mod.rs
crates/scaffolder-core/src/runtime/: check.rs  mod.rs  tool.rs
crates/scaffolder-core/src/templates/: copier.rs  fetcher.rs  manifest.rs  mod.rs  version.rs
crates/scaffolder-core/src/tui/: mod.rs  prompts.rs
crates/scaffolder-core/tests/: cli_helpers.rs  e2e_multi_worker_orchestration.rs  e2e_quickstart.rs  fetcher.rs  template_validation.rs
crates/scaffolder-core/tests/e2e_harness/: mod.rs
cron-scheduling/: SKILL.md
custom-triggers/: SKILL.md
data/: streams_store.db
dead-letter-queues/: SKILL.md
docs/: .gitignore  .mintignore  .prettierrc  .skill-check.yaml  .vale.ini  LICENSE  PROGRESS-repo-checks.md  PROGRESS.md  README.md  README.md.skill.md  RELEASING.md  adapters.mdx  changelog.mdx  custom.css  docs.json  index.mdx  index.mdx.skill.md  install.mdx  install.mdx.skill.md  navbar-autohide.js  navbar-counters.js  package.json  quickstart.mdx  quickstart.mdx.skill.md  remote-functions.mdx  tab-height-lock.js  tab-scroll-preserve.js  troubleshooting.mdx  troubleshooting.mdx.skill.md  understanding-iii.mdx  welcome.mdx  workers.mdx
engine/: .dockerignore  .pre-commit-config.yaml  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  build.rs  config-remote-kv.yaml  config.prod.yaml  config.yaml  docker-compose.prod.yml  docker-compose.yml  header.txt  install.sh  licenserc.toml  local-worker-dev.md
engine-config/: SKILL.md
examples/: custom_event_adapter.rs  custom_queue_adapter.rs
frameworks/motia/motia-py/playground/: .env.example  README.md  config.yaml  pyproject.toml
frameworks/motia/motia-py/playground/steps/: __init__.py
frameworks/motia/motia-py/playground/steps/api_steps/: sse_step.py
frameworks/motia/motia-py/playground/steps/conditions/: api_with_conditions_step.py  cron_with_condition_step.py  mixed_triggers_step.py  multiple_conditions_step.py  single_condition_step.py
frameworks/motia/motia-py/playground/steps/dotenv_example/: dotenv_check_step.py
frameworks/motia/motia-py/playground/steps/greetings/: delete_step.py  get_step.py  greet_step.py  list_step.py  summary_step.py
frameworks/motia/motia-py/playground/steps/multi_trigger/: dual_trigger_step.py  multiple_apis_step.py  multiple_events_step.py  single_api_step.py  single_cron_step.py  single_event_step.py  triple_trigger_step.py
frameworks/motia/motia-py/playground/steps/otel_example/: create_order_step.py  notify_order_step.py  process_order_step.py
frameworks/motia/motia-py/playground/steps/state_example/: on_state_change_step.py  update_state_step.py
frameworks/motia/motia-py/playground/steps/stream_example/: create_todo_step.py  on_todo_event_step.py
frameworks/motia/motia-py/playground/steps/todo/: create_todo_step.py  delete_todo_step.py  update_todo_step.py
function-macros/: Cargo.toml
functions-and-triggers/: SKILL.md
http-endpoints/: SKILL.md
http-invoked-functions/: SKILL.md  reference.js
observability/: SKILL.md
plugin-bullmq/: README.md  package.json  tsdown.config.ts
plugin-cron/: README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
plugin-endpoint/: jest.config.cjs  package.json
plugin-example/: README.md  package.json  tsdown.config.ts
plugin-logs/: package.json
plugin-observability/: package.json  tsconfig.json
plugin-states/: package.json
plugin-streams/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts
plugin-ws/: README.md  package.json  (+2 more)
(+2613 files in other folders)
