[package]
name = "iii"
version = "0.1.0"
edition = "2024"

[lib]
name = "iii"
path = "src/lib.rs"

[[bin]]
name = "iii"
path = "src/main.rs"

[[example]]
name = "custom_event_adapter"
path = "examples/custom_event_adapter.rs"

[dependencies]
function-macros = { path = "function-macros" }
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.7", features = ["ws", "macros"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

anyhow = "1.0.100"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1.89"
colored = "3.0.0"
cron = "0.15"
once_cell = "1.21.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
notify = "8.2.0"
swc_ecma_parser = "=0.151.0"
swc_ecma_ast = "=0.120.0"
swc_common = "=0.39.0"
glob = "0.3"
