[package]
name = "iii"
version = "0.0.8"
edition = "2024"

[lib]
name = "iii"
path = "src/lib.rs"

[[bin]]
name = "iii"
path = "src/main.rs"

[[example]]
name = "custom_event_adapter"
path = "examples/custom_event_adapter.rs"

[dependencies]
function-macros = { path = "function-macros" }
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread" ] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

axum = { version = "0.8", features = ["ws", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

anyhow = "1.0.100"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1.89"
colored = "3.0.0"
cron = "0.15"
once_cell = "1.21.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
notify = "8.2.0"
inventory = "0.3"
