[workspace]
resolver = "2"
members = [
  "connect/mcp",
  "connect/a2a",
  "engine",
  "engine/function-macros",
  "sdk/packages/rust/iii",
  "sdk/packages/rust/iii-example",
  "console/packages/console-rust",
]

[workspace.package]
authors = ["Motia LLC"]
repository = "https://github.com/iii-hq/iii"
homepage = "https://iii.dev"

[workspace.dependencies]
iii-sdk = { path = "sdk/packages/rust/iii" }
