[project]
name = "motia-example"
version = "0.0.2"
description = "Motia Framework Example"
authors = [{ name = "III" }]
requires-python = ">=3.10"

dependencies = [
    "motia[otel]",
    "iii-sdk>=0.4.0",
    "pydantic>=2.0",
]

[tool.uv.sources]
motia = { path = "../packages/motia" }
iii-sdk = { path = "../../../../sdk/packages/python/iii" }
